# reopal

./: Cargo.toml  PROMPT.md  README.md  config.yml
.cargo/: config.toml
docs/: MAINTENANCE.md  WEB_VIEWER_PRD.md
src/: cli.rs  db.rs  lib.rs  main.rs  maintenance.rs  models.rs  scanner.rs
src/web/: handlers.rs  middleware.rs  mod.rs  routes.rs  server.rs  state.rs
web/static/: app.js  index.html  styles.css
